# synth_assess

./: README.md  analyze.py  extra.py  hull_input_data.json  hull_t.json  pyproject.toml  pyproject.toml~  setup.py
examples/: selectivity_example.ipynb
old_dev/analyze/: rxn.py  thermo.py
old_dev/core/: competition_comparison  synthdata.py
solidstatesynth/: analyze.py  implement.py  new_materials.py  optimize_gamma.py  visualize_gamma.py
solidstatesynth/analyze/: Interactive - rxn.py.ipynb  compound.py  rxn.py  target.py
solidstatesynth/competitions/: reaction_generation.py
solidstatesynth/core/: build_entry.py  competition_comparison  competitions.py  synthdata.py  utils.py
solidstatesynth/data/: BaCeOHC_rxns.pkl  BaCrOHC_rxns.pkl  BaMoOHC_rxns.pkl  BaOPuHC_rxns.pkl  BaORhHC_rxns.pkl  BaOSbHC_rxns.pkl  BaOSnHC_rxns.pkl  BaOWHC_rxns.pkl  BaTiOHC_rxns.pkl  BaWOHC_rxns.pkl  BiFeOHC_rxns.pkl  BiNbOHC_rxns.pkl  BiOVHC_rxns.pkl  CaClOHC_rxns.pkl  CaClO_rxns.json  CaClO_rxns.npy  CaCrOHC_rxns.pkl  CaInOHC_rxns.pkl  CaMnOHC_rxns.pkl  CaMoOHC_rxns.pkl  CdFeOHC_rxns.pkl  CdInOHC_rxns.pkl  CdMoOHC_rxns.pkl  CrCuOHC_rxns.pkl  CrLaOHC_rxns.pkl  CrMgOHC_rxns.pkl  CrNiOHC_rxns.pkl  CrOSmHC_rxns.pkl  CrOSrHC_rxns.pkl  CrOTeHC_rxns.pkl  CrOYHC_rxns.pkl  CrOZnHC_rxns.pkl  CuCrOHC_rxns.pkl  DyInOHC_rxns.pkl  DyOZrHC_rxns.pkl  EuORuHC_rxns.pkl  EuOVHC_rxns.pkl  EuVOHC_rxns.pkl  FeLuOHC_rxns.pkl  FeNbOHC_rxns.pkl  (+55 more)
solidstatesynth/extract/: icsd.py  mp.py  tm.py
solidstatesynth/implement/: from solidstatesynth.gen.py  generate_for_chemsys.py  textmined_comp_comparison.py
solidstatesynth/plotting/: fig_plotting.py  plot_helpers.py
solidstatesynth/pred/: predict.py
solidstatesynth/rxn_generation/: metrics_calculation.py  reaction_generation.py
temp/: t.py
tests/: README.md  test_analyze.py  test_build.py  test_selectivity.py
(+72 files in other folders)
